@@ -1,38 +1,37 @@
 package com.tymbl.config;
 
 import io.swagger.v3.oas.models.OpenAPI;
-import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.info.Contact;
+import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.info.License;
 import io.swagger.v3.oas.models.servers.Server;
+import java.util.Arrays;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-
-import java.util.List;
 
 @Configuration
 public class OpenApiConfig {
 
-    @Bean
-    public OpenAPI openAPI() {
-        Server devServer = new Server()
-                .url("http://localhost:8080")
-                .description("Development server");
+  @Bean
+  public OpenAPI openAPI() {
+    Server devServer = new Server()
+        .url("http://localhost:8080")
+        .description("Development server");
 
-        Contact contact = new Contact()
-                .name("Tymbl")
-                .email("support@tymbl.com")
-                .url("https://tymbl.com");
+    Contact contact = new Contact()
+        .name("Tymbl")
+        .email("support@tymbl.com")
+        .url("https://tymbl.com");
 
-        Info info = new Info()
-                .title("Job Referral API")
-                .version("1.0.0")
-                .contact(contact)
-                .description("API documentation for the Job Referral Application")
-                .license(new License().name("Apache 2.0").url("http://springdoc.org"));
+    Info info = new Info()
+        .title("Job Referral API")
+        .version("1.0.0")
+        .contact(contact)
+        .description("API documentation for the Job Referral Application")
+        .license(new License().name("Apache 2.0").url("http://springdoc.org"));
 
-        return new OpenAPI()
-                .info(info)
-                .servers(List.of(devServer));
-    }
-} 
+    return new OpenAPI()
+        .info(info)
+        .servers(Arrays.asList(devServer));
+  }
+}
